--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,8 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
     "jest": "^28.0.3",
@@ -30,7 +32,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@prisma/client": "^3.13.0",
+    "@prisma/client": "^3.15.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
